{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 4,
  "lineage": "ccacd7b7-6b72-c9c5-a154-71eb863acb33",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/networkSecurityGroups/QA-nsg/securityRules/Allow_HTTP",
            "name": "Allow_HTTP",
            "network_security_group_name": "QA-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "qa-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.azurerm_network_security_group.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/networkInterfaces/QA-private-nic",
            "internal_domain_name_suffix": "b41xyetutb4encfzurnodrfwsb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "QA-private-ip-config",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/virtualNetworks/QA-network/subnets/QA-private"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-ED-94-0B",
            "name": "QA-private-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "qa-rg",
            "virtual_machine_id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Compute/virtualMachines/QA-private-vm"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.example",
            "module.network.azurerm_subnet.private",
            "module.network.azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/networkInterfaces/QA-public-nic",
            "internal_domain_name_suffix": "b41xyetutb4encfzurnodrfwsb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "QA-public-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/publicIPAddresses/QA-public-ip",
                "subnet_id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/virtualNetworks/QA-network/subnets/QA-public"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-DB-28-14",
            "name": "QA-public-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "qa-rg",
            "virtual_machine_id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Compute/virtualMachines/QA-public-vm"
          },
          "dependencies": [
            "module.network.azurerm_public_ip.example",
            "module.network.azurerm_resource_group.example",
            "module.network.azurerm_subnet.public",
            "module.network.azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/publicIPAddresses/QA-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.124.231.95",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "QA-public-ip",
            "resource_group_name": "qa-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/virtualNetworks/QA-network/subnets/QA-private",
            "name": "QA-private",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "qa-rg",
            "virtual_network_name": "QA-network"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.example",
            "module.network.azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/virtualNetworks/QA-network/subnets/QA-public",
            "name": "QA-public",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "qa-rg",
            "virtual_network_name": "QA-network"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.example",
            "module.network.azurerm_virtual_network.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "127cb70f-9874-467c-88b9-a45ae1c4b691",
            "id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/virtualNetworks/QA-network",
            "location": "eastus",
            "name": "QA-network",
            "resource_group_name": "qa-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/virtualNetworks/QA-network/subnets/QA-public",
                "name": "QA-public"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/virtualNetworks/QA-network/subnets/QA-private",
                "name": "QA-private"
              }
            ]
          },
          "dependencies": [
            "module.network.azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9eb41ae2-c5dd-46e9-aefb-991ab0c67e2d/resourceGroups/qa-rg/providers/Microsoft.Network/networkSecurityGroups/QA-nsg",
            "location": "eastus",
            "name": "QA-nsg",
            "resource_group_name": "qa-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_RDP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_HTTP",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}